fix: removed map on mobile view

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -488,4 +488,7 @@ div#Sandwich {
 	.vegetables {
 		display: none;
 	}
+	#map {
+		display: none;
+	}
 }
